--- a/css/styles.css
+++ b/css/styles.css
@@ -3,24 +3,27 @@
 
 :root {
     --cream-color: #f6f5f2;
+    --black-color: black;
 }
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 /* Default Properties */
 body {
-    color: #333;
+    color: var(--black-color);
     font-family: 'Montserrat', sans-serif;
+    text-align: center;
 }
 
 h1 {
     font-family: 'Playfair Display', serif;
     font-weight: 700;
-    font-size: 9em;
+    font-size: 3em;
 }
 
 p {
@@ -29,7 +32,7 @@ p {
 }
 
 .custom-section {
-    padding: 50px 220px 50px 350px;
+    padding: 50px 20px;
 }
 
 .cream-section {
@@ -43,19 +46,30 @@ p {
 
 footer {
     padding: 50px;
-    background-color: #333;
+    background-color: var(--black-color);
     color: #f2f2f2;
 }
 
+
+.brand {
+    margin-top: 30px;
+    width: 60px;
+}
+
 .footer-flex {
-    font-size: 14px;
-    display: flex;
-    justify-content: space-around;
-    padding-bottom: 30px;
+    text-align: left;
 }
 
 .footer-flex ul {
     list-style: none;
+}
+
+.footer-flex li {
+    margin-bottom: 30px;
+}
+
+.footer-flex h2 {
+    margin: 30px 0;
 }
 
 .footer-flex li a {
@@ -64,22 +78,35 @@ footer {
 }
 
 .copyright {
-    text-align: center;
+    text-align: left;
 }
 
+@media screen and (min-width: 360px) {
+    h1 {
+        font-size: 2em;
+    }
+}
 
-@media screen and (max-width: 479px) {
+@media screen and (min-width: 479px) {
     h1 {
         font-size: 3em;
     }
 
     .footer-flex {
-        display: inline;
+        
+        font-size: 14px;
+        display: flex;
+        justify-content: space-around;
         padding-bottom: 30px;
     }
+
+    .copyright {
+        text-align: center;
+    }
+    
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 767px) {
     h1 {
         font-size: 5em;
     }
@@ -89,16 +116,34 @@ footer {
     }
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (min-width: 900px) {
+    body {
+        text-align: left;
+    }
+
     .custom-section {
-        padding: 50px 20px;
+        padding: 50px 100px 50px 250px;
+    }
+    h1 {
+        font-size: 5.5em;
     }
 }
 
-@media screen and (max-width: 1440px) {
-    
+@media screen and (min-width: 1280px) {
+    .custom-section {
+        padding: 50px 220px 50px 250px;
+    }
     h1 {
-        font-size: 8em;
+        font-size: 7em;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .custom-section {
+        padding: 50px 220px 50px 350px;
+    }
+    h1 {
+        font-size: 7.5em;
     }
 
 }
