--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
+    
 }
 
 /* Default Properties */
@@ -29,6 +29,16 @@ h1 {
 p {
     font-weight: 400;
     font-size: 1.2em;
+}
+
+.hero-landing {
+    height: 100vh;
+    background: #123 url(//unsplash.it/900);
+    background-size: cover;
+    background-blend-mode: overlay;
+    padding: 30vh 0;
+    color: white;
+    text-align: center;
 }
 
 .custom-section {
