--- a/css/styles.css
+++ b/css/styles.css
@@ -24,21 +24,28 @@ h1 {
     font-family: 'Playfair Display', serif;
     font-weight: 700;
     font-size: 3em;
+    margin-bottom: 20px;
 }
 
 p {
     font-weight: 400;
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 
 .hero-landing {
     height: 100vh;
-    background: #123 url(//unsplash.it/900);
+    background: #222 url("../assets/background/bg.jpg");
     background-size: cover;
     background-blend-mode: overlay;
-    padding: 30vh 0;
+    background-position: center;
+    
+    padding: 40vh 0;
     color: white;
     text-align: center;
+}
+
+.hero-landing p {
+    font-size: 1rem;
 }
 
 .custom-section {
@@ -47,6 +54,41 @@ p {
 
 .cream-section {
     background-color: var(--cream-color);
+}
+
+.social-flex {
+    display: flex;
+    font-size: 5em;
+    margin-top: 50px;
+}
+
+.social-flex i:hover {
+    transform: scale(1.1);
+    transition: 0.2s ease-in;
+}
+
+
+.social-icon {
+    cursor: pointer;
+    margin-right: 70px;
+    
+    
+}
+
+.social-icon:last-child {
+    margin-right: 0;
+}
+
+.social-flex {
+    text-align: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+
+
+.icon {
+    width: 100px;
 }
 
 .warn {
@@ -91,22 +133,46 @@ footer {
     text-align: left;
 }
 
+@media screen and (max-width: 359px) {
+    p {
+        font-size: 0.9em;
+    }
+
+    .social-flex {
+        flex-direction: column;
+        font-size: 3em;
+    }
+    .social-icon {
+        margin-right: 0;
+    }
+}
+
 @media screen and (min-width: 360px) {
     h1 {
-        font-size: 2em;
+        font-size: 3em;
+    }
+
+    p {
+        font-size: 0.9em;
+    }
+    .social-flex {
+        font-size: 3em;
     }
 }
 
 @media screen and (min-width: 479px) {
     h1 {
-        font-size: 3em;
+        font-size: 4.5em;
+    }
+    p {
+        font-size: 0.9em;
     }
 
+
     .footer-flex {
-        
         font-size: 14px;
         display: flex;
-        justify-content: space-around;
+        
         padding-bottom: 30px;
     }
 
@@ -122,7 +188,12 @@ footer {
     }
     
     p {
-        font-size: 1.1em;
+        font-size: 1.0em;
+    }
+
+    .social-flex {
+        
+        justify-content: space-around;
     }
 }
 
@@ -134,8 +205,14 @@ footer {
     .custom-section {
         padding: 50px 100px 50px 250px;
     }
+
     h1 {
         font-size: 5.5em;
+    }
+
+    .social-flex {
+        justify-content: space-between;
+        width: 70%;
     }
 }
 
@@ -153,7 +230,11 @@ footer {
         padding: 50px 220px 50px 350px;
     }
     h1 {
-        font-size: 7.5em;
+        font-size: 7em;
+    }
+
+    p {
+        font-size: 1.1em;
     }
 
 }
