--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,7 +4,7 @@
     --nav-bg-scrolled: black;
     --nav-col-width: 100%;
     --nav-height: 12vh;
-    --nav-collapsed-height: 88vh; /*Subtract this 100 from --nav-height in order to show logo*/
+    --nav-collapsed-height: 90vh; /*Subtract this 100 from --nav-height in order to show logo*/
 }
 nav {
     display: flex;
@@ -59,6 +59,11 @@ nav {
     font-size: 16px;
     text-decoration: none;
     text-transform: uppercase;
+}
+
+.nav-links a:hover {
+    color: #355f9e;
+    transition: all 0.5s ease;
 }
 
 .menu-toggle {
