--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ p {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
+    margin-top: 50px;
     
 }
 
@@ -115,10 +116,6 @@ p {
     cursor: pointer;
     box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
     margin: 20px;
-}
-
-.portfolio-work:first-child {
-    margin-left: 0px;
 }
 
 .portfolio-work p {
@@ -321,6 +318,11 @@ footer {
 
     .gallery {
         justify-content: start;
+        
+    }
+
+    .portfolio-work:first-child {
+        margin-left: 0px;
     }
 }
 
