--- a/css/flex.css
+++ b/css/flex.css
@@ -3,6 +3,7 @@
     flex-direction: row-reverse;
     /* margin: 20px 150px; */
     text-align: center;
+    margin-top: 40px;
 }
 
 .services-description h2 {
