--- a/css/forms.css
+++ b/css/forms.css
@@ -31,8 +31,8 @@ input {
 
 .submit {
     margin-top: 20px;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     border: none;
     padding: 20px 30px;
     font-size: 1em;
