--- a/css/flex.css
+++ b/css/flex.css
@@ -1,55 +1,54 @@
-.services-description {
-    display: block ;
-    flex-direction: row-reverse;
-    /* margin: 20px 150px; */
-    text-align: center;
-    margin-top: 40px;
+.services {
+    height: 100%;
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.services-description h2 {
-    font-family: 'Playfair Display', serif;
-    font-weight: bold;
+.service-1 {
+    width: 320px;
+    background-color: transparent;
+    padding: 15px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+
+.service-1:hover {
+    transform: scale(1.1);
+    transition: 0.5s ease-in-out;
+}
+
+.img {
+    padding-top: 30px;
+}
+
+.img img {
+    height: 170px;
+    width: 100%;
+}
+
+.description {
+    padding-bottom: 30px;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.description p {
+    font-size: 0.9em;
+}
+
+.description h2 {
     font-size: 2em;
-}
-
-
-.services-photo {
-    padding: 10px 0px;
-    width: 100%;
-    height: 200px;
-    /* background-color: coral; */
+    color: black;
     text-align: center;
-    
+    font-family: 'Playfair Display', serif;
+    margin-bottom: 10px;
 }
 
-.services-photo img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.services-desc {
-    padding: 10px 0px;
-    width: 100%;
-    /* background-color: darkkhaki; */
-} 
-
-.services-desc p {
-    margin-top: 20px;
-}
-
-
-@media screen and (min-width: 900px) {
-    .services-description {
-        display: flex;
-        text-align: left;
-    }
-
-    .services-photo{
-        width: 50%;
-        height: 300px;
-    }
-
-    .services-desc {
-        width: 50%;
+@media screen  and (min-width: 900px) {
+    .services {
+        justify-content: space-between;
     }
 }
