--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,9 @@ p {
 .section-details-white {
     background-image: url(../assets/icons/bg-details.svg);
     background-repeat: no-repeat;
+    background-size: cover; 
 }
+
 
 .custom-section {
     padding: 50px 20px;
@@ -103,53 +105,6 @@ p {
 .see-more:hover {
     transition: all 0.3s ease-in;
     transform: scale(1.1);
-}
-
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-evenly;
-    margin-top: 50px;
-    
-}
-
-.portfolio-work {
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-    cursor: pointer;
-    box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-    margin: 20px;
-}
-
-.portfolio-work p {
-    position: relative;
-    top: -300px;
-    
-    margin: 10px 10px;
-    color: white;
-    font-weight: bold;
-    text-shadow: 1px 1px 2px black;
-    font-size: 1.3em;
-}
-
-.portfolio-work:hover {
-    transition: all 0.5s ease-in-out;
-    transform: scale(1.1);
-}
-
-.portfolio-work img {
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-    filter: saturate(0%);
-    
-}
-
-.portfolio-work img:hover {
-    transition: all 0.5s ease-in-out;
-    filter: saturate(100%);
 }
 
 .cream-section {
