--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,47 @@ p {
     font-size: 1.1em;
 }
 
+/*Button*/
+button {
+    font-size: 1em;
+    padding: 20px 30px;
+    cursor: pointer;
+    text-align:center;
+    border: none;
+    background-size: 300% 100%;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 0px;
+    
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+button:hover {
+    background-position: 100% 0;
+    -o-transition: all .4s ease-in-out;
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+
+button:focus {
+    outline: none;
+}
+
+button a {
+  text-decoration: none;
+  color: white;
+}
+
+.btn-black {
+    background-image: linear-gradient(to right, #232526 0%, #414345 51%, #232526 100%)
+}
+
+.btn-white {
+  background-image: linear-gradient(to left, rgba(217,217,217,1) 0%, rgba(221,221,221,1) 51%, rgba(255,255,255,1) 100%)
+}
+
 .hero-landing {
     height: 100vh;
     /** background-image: #222 url("../assets/background/bg.jpg"); */
@@ -62,8 +103,15 @@ p {
 }
 
 .blue-section {
-    background-color: #355f9e;;
+    /* background-color: #355f9e; */
+    background: rgb(53,95,158);
+    background: linear-gradient(151deg, rgba(53,95,158,1) 0%, rgba(38,73,124,1) 100%); 
     color: white;
+}
+
+.white-section {
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(230,230,230,1) 100%); 
 }
 
 .section-details-white {
@@ -88,27 +136,66 @@ p {
     align-items: center;
 }
 
-.see-more {
-    background-color: black;
-    border: none;
-    padding: 20px 30px;
-    font-size: 1em;
-    text-transform: uppercase;
-    cursor: pointer;
-}
-
-.see-more a {
-    text-decoration: none;
-    color: white;
-}
-
-.see-more:hover {
-    transition: all 0.3s ease-in;
-    transform: scale(1.1);
-}
-
 .cream-section {
-    background-color: var(--cream-color);
+    /** background-color: var(--cream-color); **/
+    background: rgb(251,250,247);
+    background: linear-gradient(142deg, rgba(251,250,247,1) 0%, rgba(246,245,242,1) 50%, rgba(235,233,228,1) 100%); 
+}
+
+/* Services */
+.services {
+    height: 100%;
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.service-1 {
+    width: 320px;
+    background-color: transparent;
+    padding: 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    text-align: center;
+}
+
+
+.service-1:hover {
+    transform: scale(1.1);
+    transition: 0.5s ease-in-out;
+}
+
+.img {
+    padding-top: 30px;
+}
+
+.img img {
+    height: 170px;
+    width: 100%;
+}
+
+.img-portfolio img {
+    height: 250px;
+    width: 250px;
+}
+
+.description {
+    padding-bottom: 30px;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.description p {
+    font-size: 0.9em;
+}
+
+.description h2 {
+    font-size: 2em;
+    color: black;
+    text-align: center;
+    font-family: 'Playfair Display', serif;
+    margin-bottom: 10px;
 }
 
 .social-flex {
@@ -151,6 +238,40 @@ p {
 .warn {
     color: white;
     font-size: 0.9em;
+}
+
+
+/* Form */
+textarea {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+}
+
+input {
+    
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+}
+
+.name {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 50px;
+}
+
+.message {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+    height: 200px;
+    align-items: initial;
+    
+}
+
+.submit {
+    margin-top: 20px;
+    color: black;
 }
 
 footer {
@@ -267,6 +388,10 @@ footer {
         font-size: 5.5em;
     }
 
+    .services {
+        justify-content: space-between;
+    }
+
     .social-flex {
         justify-content: space-between;
         width: 70%;
@@ -311,4 +436,195 @@ footer {
         font-size: 1.1em;
     }
 
+}
+
+/** Scroll Animations **/
+[data-scroll] {
+    transition: all 2s;
+  }
+  
+  [data-scroll="in"] {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+  [data-scroll="out"] {
+    opacity: 0;
+    transform: translateY(-80px);
+  }
+  
+  [data-scroll1] {
+    transition: all 2s;
+  }
+  
+  [data-scroll1="in"] {
+    opacity: 1;
+    transform: translateZ(0);
+  }
+  
+  [data-scroll1="out"] {
+    opacity: 0;
+    transform: translateZ(-80px);
+  }
+
+
+
+
+/* NAVBAR*/
+:root {
+    --nav-text: white;
+    --nav-bg: transparent;
+    --nav-bg-scrolled: black;
+    --nav-col-width: 100%;
+    --nav-height: 12vh;
+    --nav-collapsed-height: 90vh; /*Subtract this 100 from --nav-height in order to show logo*/
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: var(--nav-height);
+    background-color: var(--nav-bg);
+    position: fixed;
+    width: 100%;
+    top: 0;
+    transition: all 0.6s ease-in;
+    z-index: 999;
+}
+
+.nav-normal {
+    background-color: var(--nav-bg);
+    
+}
+
+.nav-scrolled {
+    background-color: var(--nav-bg-scrolled);
+    min-height: 10vh;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+    
+}
+
+.nav-up {
+    transition: top 0.5s;
+    top: -100px
+}
+
+.nav-down {
+    transition: top 0.5s;
+}
+
+.logo {
+    width: 40px;
+    cursor: pointer;
+}
+
+.nav-links {
+    display: flex;
+    width: 55%;
+    justify-content: space-around;
+}
+
+.nav-links li {
+    list-style: none;
+}
+
+.nav-links a {
+    color: var(--nav-text);
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.nav-links a:hover {
+    color: #355f9e;
+    transition: all 0.5s ease;
+}
+
+.menu-toggle {
+    display: none;
+}
+
+@media screen and (max-width: 1000px) {
+    body {
+        overflow-x: hidden;
+    }
+
+    .nav-black {
+        background-color: black;
+        transition: all 0.5s ease-in;
+    }
+
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        height: var(--nav-collapsed-height);
+        top: 10vh;
+        background-color: black;
+        flex-direction: column;
+        align-items: center;
+        width: var(--nav-col-width);
+        transform: translateX(100%);
+        
+    }
+
+    .nav-links li {
+        opacity: 0;
+    }
+
+    /*Hamburguer Menu*/
+    .menu-toggle {
+        display: block;
+        cursor: pointer;
+        float: right;
+    }
+      
+    .hamburger,
+    .hamburger::before,
+    .hamburger::after {
+        content: '';
+        display: block;
+        background: white;
+        height: 3px;
+        width: 1.75em;
+        border-radius: 3px;
+        transition: all ease-in-out 500ms;
+    }
+    
+    .hamburger::before {
+        transform: translateY(-6px);
+    }
+    
+    .hamburger::after {
+        transform: translateY(3px);
+    }
+    
+    .open .hamburger {
+        transform: rotate(45deg);
+    }
+    
+    .open .hamburger::before {
+        opacity: 0;
+    }
+    
+    .open .hamburger::after {
+        transform: translateY(-3px) rotate(-90deg);
+    }
+    /*End Hamburguer Menu*/
+
+}
+
+.nav-active {
+    transform: translateX(0%);
+    transition: transform 0.5s ease-in;
+}
+
+/*Animation*/
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    } to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
 }
