--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -65,6 +65,15 @@ button a {
   color: white;
 }
 
+.lang {
+    color: white;
+}
+
+.lang a {
+    text-decoration: none;
+    color: white;
+}
+
 .btn-black {
     background-image: linear-gradient(to right, #232526 0%, #414345 51%, #232526 100%)
 }
@@ -549,6 +558,18 @@ nav {
         overflow-x: hidden;
     }
 
+    .lang {
+        order: 0;
+    }
+
+    .logo {
+        order: 1;
+    }
+
+    .menu-toggle {
+        order: 2;
+    }
+
     .nav-black {
         background-color: black;
         transition: all 0.5s ease-in;
@@ -561,14 +582,14 @@ nav {
         top: 10vh;
         background-color: black;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         width: var(--nav-col-width);
         transform: translateX(100%);
-        
     }
 
     .nav-links li {
         opacity: 0;
+        margin-left: 60px;
     }
 
     /*Hamburguer Menu*/
