--- a/css/main.scss
+++ b/css/main.scss
@@ -30,6 +30,12 @@ button {
         cursor: pointer;
         background-color: black;
         color: white;
+
+    }
+
+    a {
+        color: white;
+        text-decoration: none;
     }
 }
 
