--- a/css/navbar.css
+++ b/css/navbar.css
@@ -65,7 +65,7 @@ nav {
 }
 
 .nav-links a:hover {
-    color: #355f9e;
+    color: black;
     transition: all 0.5s ease;
 }
 
@@ -105,6 +105,7 @@ nav {
         align-items: flex-start;
         width: var(--nav-col-width);
         transform: translateX(100%);
+        z-index: -1;
     }
 
     .nav-links li {
