--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,24 @@ section p {
   background-position: center;
 }
 
+.portfolio-image {
+  height: 60vh;
+  width: 100%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(black)), url(../assets/images/background/portfolio.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, black 100%), url(../assets/images/background/portfolio.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.giveaway-image {
+  height: 60vh;
+  width: 100%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(black)), url(../assets/images/background/website-giveaway-01.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0) 0%, black 100%), url(../assets/images/background/website-giveaway-01.jpg);
+  background-size: cover;
+  background-position: bottom;
+}
+
 .dare-section {
   padding-bottom: 0;
 }
@@ -217,6 +235,17 @@ section p {
 
 .contact p {
   margin-bottom: 20px;
+}
+
+.form-input {
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+}
+
+.form-input:focus {
+  border-color: #323232;
+  -webkit-box-shadow: 0 0 5px #323232;
+          box-shadow: 0 0 5px #323232;
 }
 
 .form-group {
